[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/models/note/Note_Model.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/models/note/Sustain_Model.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/game/notes/Sustained_Note.gd" type="Script" id=4]

[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
params_blend_mode = 1

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.075
bottom_radius = 0.075
height = 1.0

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_unshaded = true
params_blend_mode = 1
albedo_color = Color( 0.180392, 1, 0.286275, 1 )

[sub_resource type="CylinderMesh" id=4]
top_radius = 0.08
bottom_radius = 0.08
height = 1.0

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_unshaded = true
params_blend_mode = 1
albedo_color = Color( 0.0392157, 0.266667, 0.278431, 1 )

[sub_resource type="CylinderMesh" id=6]
top_radius = 0.1
bottom_radius = 0.1
height = 1.0

[sub_resource type="SphereMesh" id=7]
radius = 0.075
height = 0.075
is_hemisphere = true

[sub_resource type="SphereMesh" id=8]
radius = 0.08
height = 0.08
is_hemisphere = true

[sub_resource type="SphereMesh" id=9]
radius = 0.1
height = 0.1
is_hemisphere = true

[sub_resource type="Curve" id=10]
_data = [ Vector2( 0, 1 ), 0.0, -0.981818, 0, 0, Vector2( 1, 0 ), -0.866667, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
direction = Vector3( 0, 0, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
scale = 1.5
scale_random = 1.0
scale_curve = SubResource( 11 )

[sub_resource type="SpatialMaterial" id=13]
flags_unshaded = true
params_cull_mode = 1
albedo_color = Color( 0.282353, 0.956863, 0.12549, 1 )

[sub_resource type="SphereMesh" id=14]
material = SubResource( 13 )
radius = 0.15
height = 0.3

[sub_resource type="SpatialMaterial" id=15]
flags_unshaded = true

[sub_resource type="SphereMesh" id=16]
material = SubResource( 15 )
radius = 0.12
height = 0.24

[sub_resource type="SpatialMaterial" id=17]
flags_unshaded = true
albedo_color = Color( 0.282353, 0.956863, 0.12549, 1 )

[sub_resource type="SphereMesh" id=18]
material = SubResource( 17 )
radius = 0.15
height = 0.3

[node name="Sustained_Note" type="Spatial"]
script = ExtResource( 4 )

[node name="Note_Model" parent="." instance=ExtResource( 1 )]
transform = Transform( 0.005, 0, 0, 0, -2.18557e-10, -0.005, 0, 0.005, -2.18557e-10, 0, 0, 0 )

[node name="Sustain_Part" type="Spatial" parent="."]
transform = Transform( 0.9, 0, 0, 0, 0.9, 0, 0, 0, 1, 0, 0, -1 )

[node name="Sustain_Model" parent="Sustain_Part" instance=ExtResource( 2 )]
transform = Transform( 0.005, 0, 0, 0, -2.18557e-10, -0.005, 0, 0.09804, -4.28546e-09, 0, 0, 0.5 )

[node name="Opp_Sustain_Part" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
visible = false

[node name="Inner" type="MeshInstance" parent="Opp_Sustain_Part"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.285, 0, 0.5, 0 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null

[node name="Middle" type="MeshInstance" parent="Opp_Sustain_Part"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.285, 0, 0.5, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )
material/0 = null

[node name="Outer" type="MeshInstance" parent="Opp_Sustain_Part"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.285, 0, 0.5, 0 )
material_override = SubResource( 5 )
mesh = SubResource( 6 )
material/0 = null

[node name="RemoteTransform" type="RemoteTransform" parent="Opp_Sustain_Part"]
remote_path = NodePath("../../Opp_Sustain_Endcap")
update_rotation = false
update_scale = false

[node name="Opp_Sustain_Endcap" type="Spatial" parent="."]
transform = Transform( -1, -8.74228e-08, 0, 8.74228e-08, -1, 0, 0, 0, 1, 0, -1, 0 )
visible = false

[node name="Inner" type="MeshInstance" parent="Opp_Sustain_Endcap"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.285, 0, 0, 0 )
material_override = SubResource( 1 )
mesh = SubResource( 7 )
material/0 = null

[node name="Middle" type="MeshInstance" parent="Opp_Sustain_Endcap"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.285, 0, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 8 )
material/0 = null

[node name="Outer" type="MeshInstance" parent="Opp_Sustain_Endcap"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.285, 0, 0, 0 )
material_override = SubResource( 5 )
mesh = SubResource( 9 )
material/0 = null

[node name="Particles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
emitting = false
lifetime = 0.2
one_shot = true
explosiveness = 1.0
randomness = 1.0
visibility_aabb = AABB( -0.25, -0.25, -0.25, 0.5, 0.5, 0.5 )
process_material = SubResource( 12 )
draw_passes = 2
draw_pass_1 = SubResource( 14 )
draw_pass_2 = SubResource( 16 )

[node name="Particles_GLES2" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
emitting = false
lifetime = 0.2
one_shot = true
explosiveness = 1.0
randomness = 1.0
mesh = SubResource( 18 )
direction = Vector3( 0, 0, 0 )
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
scale_amount = 1.5
scale_amount_random = 1.0
scale_amount_curve = SubResource( 10 )

[node name="Tween" type="Tween" parent="."]
